--- a/hjh.html
+++ b/hjh.html
@@ -1,40 +1,86 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wiki Platform</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-</head>
-<body class="bg-gray-100">
 
-<!-- Navigation Bar -->
+  <style>
+    @media (max-width: 1024px) {
+      .sidebar {
+        display: none;
+      }
+
+      .sidebar-toggle {
+        display: block;
+        position: fixed;
+        top: 20px;
+        right: 20px; /* Set to right */
+        z-index: 999;
+        cursor: pointer;
+        color: #000; /* Set to black */
+      }
+
+      .sidebar-toggle span {
+        display: block;
+        width: 30px;
+        height: 4px;
+        background-color: #000; /* Set to black */
+        margin-bottom: 6px;
+      }
+    }
+  </style>
 
 
-<!-- Main Content -->
-<!-- Main Content -->
-<div class="container mx-auto mt-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-    <!-- Wiki Card -->
-    <div class="bg-white rounded-md overflow-hidden shadow-md transition-transform transform hover:scale-105">
-        <div class="p-6">
-            <h2 class="text-2xl font-bold mb-2 text-gray-800">Wiki Title</h2>
-            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="flex items-center">
-                <span class="text-sm text-gray-500 mr-2">Category:</span>
-                <a href="#" class="text-blue-500">Category Name</a>
-            </div>
-            <div class="mt-2 flex items-center">
-                <span class="text-sm text-gray-500 mr-2">Tags:</span>
-                <a href="#" class="text-blue-500 mr-2">Tag1</a>
-                <a href="#" class="text-blue-500">Tag2</a>
-            </div>
-        </div>
+<body class="bg-gray-100 font-sans leading-normal tracking-normal">
+  <!-- Sidebar Toggle Button -->
+  <div class="sidebar-toggle" onclick="toggleSidebar()">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+
+  <!-- Sidebar -->
+  <aside class="lg:w-1/4 md:w-1/3 sm:w-full bg-gray-800 text-white p-4 lg:mr-4 mb-4 sidebar">
+    <div class="mb-4">
+      <h2 class="text-2xl lg:text-3xl font-semibold">Admin Dashboard</h2>
     </div>
+    <nav>
+      <ul class="space-y-2">
+        <li>
+          <a href="<?php echo URLROOT; ?>/categories/index2"
+            class="flex items-center text-base lg:text-lg py-2 px-2 lg:px-4 rounded transition duration-300 ease-in-out transform hover:scale-105 hover:bg-gray-700">
+            <span class="mr-2">📁</span>
+            Manage Categories
+          </a>
+        </li>
+        <li>
+          <a href="<?php echo URLROOT; ?>/tags/index2"
+            class="flex items-center text-base lg:text-lg py-2 px-2 lg:px-4 rounded transition duration-300 ease-in-out transform hover:scale-105 hover:bg-gray-700">
+            <span class="mr-2">🏷️</span>
+            Manage Tags
+          </a>
+        </li>
+        <li>
+          <a href="<?php echo URLROOT; ?>/Wikis/index"
+            class="flex items-center text-base lg:text-lg py-2 px-2 lg:px-4 rounded transition duration-300 ease-in-out transform hover:scale-105 hover:bg-gray-700">
+            <span class="mr-2">📚</span>
+            Manage Wikis
+          </a>
+        </li>
+        <li>
+          <a href="dashboard.php"
+            class="flex items-center text-base lg:text-lg py-2 px-2 lg:px-4 rounded transition duration-300 ease-in-out transform hover:scale-105 hover:bg-gray-700">
+            <span class="mr-2">📊</span>
+            Dashboard Stats
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </aside>
 
-    <!-- Repeat the above card for other wikis -->
-    <!-- Add more cards as needed -->
+  <!-- Your main content goes here -->
 
-</div>
-
+  <script>
+    function toggleSidebar() {
+      const sidebar = document.querySelector('.sidebar');
+      sidebar.style.display = (sidebar.style.display === 'none' || sidebar.style.display === '') ? 'block' : 'none';
+    }
+  </script>
 </body>
+
 </html>
